Card height limited to fix mobile view overflow issue

--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,5 +1,5 @@
 .card {
-	min-height: 150px;
+	min-height: 120px;
 
 	&.winner {
 		background-color: rgba(0, 100, 0, .2);
